Fixed height of preview container and properly hide common options when shifted to other chart type

--- a/css/poll.css
+++ b/css/poll.css
@@ -216,7 +216,9 @@ select, textarea, input,
 {
     padding: 0px;
     width: 100%;
-    height: 443px;
+    height: 472px;
+    max-width: 510px;
+    max-height: 472px;
     border: 1px solid #DDD;
     background-color: #fff;
 }
